Edited wiki page C_unistd through web user interface.

--- a/wiki/C_unistd.wiki
+++ b/wiki/C_unistd.wiki
@@ -147,6 +147,7 @@ Remove directory.
 
 
 == sleep ==
+<font color="orange">blocking</font><br>
 {{{
 public function sleep( milliseconds:uint ):void
 }}}
