--- a/wiki/System.wiki
+++ b/wiki/System.wiki
@@ -243,6 +243,22 @@ trace( "AVMplus version : " + System.getAvmplusVersion() ); //AVMplus version : 
 *since:* 0.3.0
 
 
+== getRedtamarinVersion  ==
+{{{
+public static function getRedtamarinVersion():String
+}}}
+Returns the current version of the RedTamarin API.
+
+*example:* basic usage
+{{{
+import avmplus.System;
+
+trace( "RedTamarin version : " + System.getRedtamarinVersion() ); //RedTamarin version : 0.3.0
+}}}
+
+*since:* 0.3.0
+
+
 == getFeatures ==
 {{{
 public native static function getFeatures():String;
