Edited wiki page FileSystem through web user interface.

--- a/wiki/FileSystem.wiki
+++ b/wiki/FileSystem.wiki
@@ -1,36 +1,44 @@
 #summary AVMPlus File System class.
 
 <wiki:comment>
-Because we are defining libraries for Tamarin we can not really use asdoc to document the source code.
-So the rule is to document everything in the wiki page.
-Yeah it sucks because we have to sync by hand, we'll try to automate it later.
+Here we can use asdoc to document the source code.
+So the rule is to document the side notes in the wiki page.
 
-on the source code file, we use only one comment
-
-/* documentation: http://code.google.com/p/redtamarin/wiki/C_stdlib */
+/* more in depth informations: http://code.google.com/p/redtamarin/wiki/FileSystem */
 </wiki:comment>
 
 = About =
-Definition.
+Provides methods to access and manipulate computer files, directories, paths and data.
 
-*package:* {{{avmplus.*}}}
+*class:* {{{avmplus::FileSystem}}}
 
 *product:* redtamarin 0.3
 
 *since:* 0.3.0
 
-*references:*
- * link1
- * link2
+*note:*
+ * this class replace `avmplus::File`
+ * everything is blocking
+ * no support for unicode filename yet (eg. WIN32 use `char` not `wchar`
+ * it's pretty "raw", no optimizations of any kind (eg. directories traversal)
+ * no support for symlink, alias, shortcut
+
+*vocabulary:*
+ * *filename* : uniquely identify a file or directory stored on the file system
+ * *path* : part of a filename
 
 ----
 = Properties =
 
-== name ==
+== separators ==
 {{{
-public function get name():String
+public static function get separators():Array
 }}}
-Definition.
+The character separators used by the operating system.
+
+*note:*<br>
+POSIX use `/`.<br>
+WIN32 use `\`, tolerant of `/`.
 
 *since:* 0.3.0
 
@@ -41,28 +49,12 @@ Definition.
 {{{
 public function test():void
 }}}
-Definition test.
+Definition.
 
 *since:* 0.3.0
 
 ----
 
-== Introduction ==
-
-The FileSystem API provides methods to access and manipulate computer files, directories and data.
-
-
-== Details ==
-
- * everything is blocking
- * no support for unicode filename yet (eg. WIN32 use `char` not `wchar`
- * it's pretty "raw", no optimizations of any kind (eg. directories traversal)
- * no support for symlink, alias, shortcut
-
-
-== API ==
-
-*class* avmplus.FileSystem
 
 *methods*
  * `exists( filename:String ):Boolean`
