--- a/wiki/FileSystem.wiki
+++ b/wiki/FileSystem.wiki
@@ -151,6 +151,15 @@ chmod( "myfile.txt", (mode | S_IWUSR ) );              // -rw-rw-rw-
 *since:* 0.3.0
 
 
+== getLastModifiedTime ==
+{{{
+public native static function getLastModifiedTime( filename:String ):Date;
+}}}
+Returns the `filename` last modified time.
+
+*since:* 0.3.0
+
+
 == canAccess ==
 {{{
 public static function canAccess( filename:String ):Boolean
